--- a/GAME1001_Intro_to_Programming.vcxproj
+++ b/GAME1001_Intro_to_Programming.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="exercise1.cpp" />
     <ClCompile Include="lab2.cpp" />
     <ClCompile Include="lab1.cpp" />
   </ItemGroup>
