--- a/GAME1001_Intro_to_Programming.vcxproj.filters
+++ b/GAME1001_Intro_to_Programming.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="lab2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="exercise1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
