Lab 4 - added while loop to battle simulation

--- a/GAME1001_Intro_to_Programming.vcxproj.filters
+++ b/GAME1001_Intro_to_Programming.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="week4LabAssignmentPart2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="lab4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
