--- a/GAME1001_Intro_to_Programming.vcxproj
+++ b/GAME1001_Intro_to_Programming.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="lab3.cpp" />
     <ClCompile Include="lab3exercise.cpp" />
     <ClCompile Include="GAME1001_LabTest1_Phillip_Monteiro.cpp" />
+    <ClCompile Include="lab4.cpp" />
     <ClCompile Include="week4LabAssignmentPart1.cpp" />
     <ClCompile Include="week4LabAssignmentPart2.cpp" />
   </ItemGroup>
