created v1 of lab 6 exercise

--- a/GAME1001_Intro_to_Programming.vcxproj.filters
+++ b/GAME1001_Intro_to_Programming.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="lab5.cpp">
       <Filter>Lab 5</Filter>
     </ClCompile>
+    <ClCompile Include="lab6exercise.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IntegerMath.h">
