--- a/GAME1001_Intro_to_Programming.vcxproj
+++ b/GAME1001_Intro_to_Programming.vcxproj
@@ -139,7 +139,7 @@
     <ClCompile Include="week4LabAssignmentPart1.cpp" />
     <ClCompile Include="week4LabAssignmentPart2.cpp" />
     <ClCompile Include="week5LabAssignment.cpp" />
-    <ClCompile Include="week6Assignment1.cpp" />
+    <ClCompile Include="GAME1001_A1_PhillipMonteiro.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DecimalMath.h" />
